feat: Unit and Admin dashboard

--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="SANDIGI adalah sistem antrian digital modern untuk kantor layanan publik, rumah sakit, dan instansi. Kelola antrian lebih cepat, rapi, dan real-time dengan tampilan profesional."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="SANDIGI - Sistem Antrian Digital Modern"
+    />
+    <meta
+      property="og:description"
+      content="Sistem antrian digital untuk meningkatkan pelayanan. Real-time, mudah digunakan, dan tampilan profesional untuk berbagai instansi."
+    />
+    <meta property="og:url" content="https://sandigi.example.com" />
+    <meta property="og:site_name" content="SANDIGI" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="SANDIGI - Sistem Antrian Digital" />
+    <meta
+      name="twitter:description"
+      content="Solusi sistem antrian digital modern untuk pelayanan yang lebih cepat, tertib, dan efisien."
+    />
+
+    <!-- Additional SEO -->
+    <meta name="robots" content="index, follow" />
+    <meta name="author" content="SANDIGI" />
     <title>SANDIGI - Sistem Antrian Digital</title>
   </head>
   <body>
