--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="Sistem antrian digital untuk meningkatkan pelayanan. Real-time, mudah digunakan, dan tampilan profesional untuk berbagai instansi."
     />
-    <meta property="og:url" content="https://sandigi.example.com" />
+    <meta property="og:url" content="https://sandigi.lotusaja.com" />
     <meta property="og:site_name" content="SANDIGI" />
 
     <meta name="twitter:card" content="summary_large_image" />
